--- a/templates/index.html
+++ b/templates/index.html
@@ -13,15 +13,15 @@
 <div class="container">
     <h5>Данные на {{ last_record.obs_time }}</h5>
     <br>
-    <table class="table">
+    <table class="table table-sm">
         <thead class="thead-dark">
             <tr>
-                <th>Давление <br>(в мм рт. ст.)</th>
+                <th class="align-middle">Давление (мм рт. ст.)</th>
                 <th>Температура (°C)</th>
                 <th>Ощущаемая температура (°C)</th>
-                <th>Скорость ветра <br>(в м/с)</th>
+                <th>Скорость ветра (м/с)</th>
                 <th>Направление ветра</th>
-                <th>Влажность воздуха <br>(в процентах)</th>
+                <th>Влажность воздуха (%)</th>
             </tr>
         </thead>
         <tbody>
