--- a/templates/index.html
+++ b/templates/index.html
@@ -29,17 +29,22 @@
     </div>
 
     <div>
-        <canvas id="weatherChart1">
+        <canvas id="temp">
             <p>Your browser does not support the canvas element.</p>
         </canvas>
     </div>
 
     <div>
-        <canvas id="weatherChart2">
+        <canvas id="pressure">
             <p>Your browser does not support the canvas element.</p>
         </canvas>
     </div>
 
+    <div>
+        <canvas id="humidity">
+            <p>Your browser does not support the canvas element.</p>
+        </canvas>
+    </div>
 </div>
 {% else %}
     <h3>Информация отсутствует</h3>
